--- a/todo-next-app/package.json
+++ b/todo-next-app/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
+    "axios": "^1.7.2",
+    "mongoose": "^8.5.1",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "eslint": "^8",
